cmcui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zts-cmc-app-deploy
  labels:
    app: zts-cmc-app
spec:
  selector:
    matchLabels:
      app: zts-cmc-app
  replicas: 1
  template:
    metadata:
      labels:
        app: zts-cmc-app
    spec:
      containers:
      - name: zts-cmc
        image: zettasetimg/test:zts-acm-application-0.0.2_commitid-073c07
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: zts-dockerhub-token
